@@ -7,61 +7,61 @@
 
 	"NepgearsyHUDRebornMenu/ForcedLocalization" : "Langue",
 
-	"NepgearsyHUDReborn/Localization/English" : "English",
-	"NepgearsyHUDReborn/Localization/Turkish" : "Turkish",
-	"NepgearsyHUDReborn/Localization/Portuguese" : "Portuguese",
-	"NepgearsyHUDReborn/Localization/Spanish" : "Spanish",
-	"NepgearsyHUDReborn/Localization/Russian" : "Russian",
-	"NepgearsyHUDReborn/Localization/French" : "French",
-	"NepgearsyHUDReborn/Localization/Romanian" : "Romanian",
+	"NepgearsyHUDReborn/Localization/English" : "Anglais",
+	"NepgearsyHUDReborn/Localization/Turkish" : "Turc",
+	"NepgearsyHUDReborn/Localization/Portuguese" : "Portugais",
+	"NepgearsyHUDReborn/Localization/Spanish" : "Espagnol",
+	"NepgearsyHUDReborn/Localization/Russian" : "Russe",
+	"NepgearsyHUDReborn/Localization/French" : "Français",
+	"NepgearsyHUDReborn/Localization/Romanian" : "Roumain",
 
-	"NepgearsyHUDReborn/Color/White" : "White",
-	"NepgearsyHUDReborn/Color/Red" : "Red",
+	"NepgearsyHUDReborn/Color/White" : "Blanc",
+	"NepgearsyHUDReborn/Color/Red" : "Rouge",
 	"NepgearsyHUDReborn/Color/Orange" : "Orange",
-	"NepgearsyHUDReborn/Color/Yellow" : "Yellow",
-	"NepgearsyHUDReborn/Color/Green" : "Green",
+	"NepgearsyHUDReborn/Color/Yellow" : "Jaune",
+	"NepgearsyHUDReborn/Color/Green" : "Vert",
 	"NepgearsyHUDReborn/Color/Cyan" : "Cyan",
-	"NepgearsyHUDReborn/Color/Blue_Ocean" : "Blue Ocean",
-	"NepgearsyHUDReborn/Color/Blue" : "Blue",
-	"NepgearsyHUDReborn/Color/Purple" : "Purple",
-	"NepgearsyHUDReborn/Color/Pink" : "Pink",
-	"NepgearsyHUDReborn/Color/Fushia" : "Fushia",
-	"NepgearsyHUDReborn/Color/Red_Fushia" : "Red Fushia",
+	"NepgearsyHUDReborn/Color/Blue_Ocean" : "Bleu Marine",
+	"NepgearsyHUDReborn/Color/Blue" : "Bleu",
+	"NepgearsyHUDReborn/Color/Purple" : "Violet",
+	"NepgearsyHUDReborn/Color/Pink" : "Rose",
+	"NepgearsyHUDReborn/Color/Fushia" : "Magenta",
+	"NepgearsyHUDReborn/Color/Red_Fushia" : "Rouge Magenta",
 
 	"NepgearsyHUDReborn/Fonts/Normal" : "Normal (font_large_mf)",
 	"NepgearsyHUDReborn/Fonts/Eurostile" : "Eurostile",
 
-	"NepgearsyHUDReborn/HealthStyle/Thin" : "Thin",
-	"NepgearsyHUDReborn/HealthStyle/Vanilla" : "Vanilla",
+	"NepgearsyHUDReborn/HealthStyle/Thin" : "Mince",
+	"NepgearsyHUDReborn/HealthStyle/Vanilla" : "Original",
 
-	"NepgearsyHUDReborn/StatusNumberType/Health_Counter" : "Health Counter",
-	"NepgearsyHUDReborn/StatusNumberType/Shield_Counter" : "Shield Counter",
+	"NepgearsyHUDReborn/StatusNumberType/Health_Counter" : "Compteur de Vie",
+	"NepgearsyHUDReborn/StatusNumberType/Shield_Counter" : "Compteur d'armure",
 
 	"NepgearsyHUDRebornMenu/Buttons/HUDOptionsCat" : "Options de L'HUD",
-	"NepgearsyHUDRebornMenu/Buttons/HUD/AssaultBarFont" : "Assault Bar Font",
+	"NepgearsyHUDRebornMenu/Buttons/HUD/AssaultBarFont" : "Police d'ecriture de la barre d'assaut",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/Minimap" : "Activer la Minimap",
-	"NepgearsyHUDRebornMenu/Buttons/HUD/MinimapForce" : "Force la Minimap",
+	"NepgearsyHUDRebornMenu/Buttons/HUD/MinimapForce" : "Forcer la Minimap",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/MinimapSize" : "Taille de la Minimap",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/MinimapZoom" : "Zoom de la Minimap",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/Trackers" : "Activer les traqueurs",
-	"NepgearsyHUDRebornMenu/Buttons/HUD/TrueAmmo" : "Activer le vrai nombre de balles",
-	"NepgearsyHUDRebornMenu/Buttons/HUD/HealthStyle" : "Health Style",
-	"NepgearsyHUDRebornMenu/Buttons/HUD/StatusNumberType" : "Status Number Type",
+	"NepgearsyHUDRebornMenu/Buttons/HUD/TrueAmmo" : "Montrer le vrai nombre de balles",
+	"NepgearsyHUDRebornMenu/Buttons/HUD/HealthStyle" : "Style de la vie",
+	"NepgearsyHUDRebornMenu/Buttons/HUD/StatusNumberType" : "Le nombre dans le statut désigne le",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/Scale" : "Taille de l'HUD",
 	"NepgearsyHUDRebornMenu/Buttons/HUD/Spacing" : "Espacement de l'HUD",
 
 	"NepgearsyHUDRebornMenu/Buttons/MenuLobbyOptionsCat" : "Option du Menu et de l'HUD",
-	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringScreen" : "Enable the Starring Screen feature",
-	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringColor" : "Starring Color",
-	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringText" : "Starring Text",
+	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringScreen" : "Activer l'écran 'avec'",
+	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringColor" : "Couleur du 'avec'",
+	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/StarringText" : "Texte du 'avec'",
 	"NepgearsyHUDRebornMenu/Buttons/LobbyMenu/HorizontalLoadout" : "Activer l'équipement horizontal",
 	
 	"NepgearsyHUDRebornMenu/Buttons/ExtrasCat" : "Options Extra",
 	"NepgearsyHUDRebornMenu/Buttons/Extras/WaifuPicker" : "Waifu Picker",
 
 	"NepgearsyHUDRebornMenu/Buttons/ColorsCat" : "Options de Couleur",
-	"NepgearsyHUDRebornMenu/Buttons/Colors/CPColor" : "Fond du panneau de contrôle",
-	"NepgearsyHUDRebornMenu/Buttons/Colors/CPBorderColor" : "Control Panel Border Color",
+	"NepgearsyHUDRebornMenu/Buttons/Colors/CPColor" : "Couleur du fond du panneau de contrôle",
+	"NepgearsyHUDRebornMenu/Buttons/Colors/CPBorderColor" : "Couleur des bords du panneau de contrôle",
 	"NepgearsyHUDRebornMenu/Buttons/Colors/HealthColor" : "Couleur de la vie",
 	"NepgearsyHUDRebornMenu/Buttons/Colors/ShieldColor" : "Couleur de l'armure",
 	"NepgearsyHUDRebornMenu/Buttons/Colors/ObjectiveColor" : "Couleur de l'icône d'objectif",
