@@ -2,6 +2,7 @@
 - Fixed a crash with the minimap when it's forced on some maps.
 - Fixed the ERROR lines in the control panel.
 - Added Border Color option for the control panel.
+- Fixed the total ammo while having a saw and the true ammo option activated.
 - Fixed the changelog, now you can scroll...
 ...
 ...
